# claudespace

./: README.md  install.sh  pyproject.toml
claudespace/: __init__.py  __main__.py  assets_sync.py  cli.py  config.py  environment.py  handoff.py  iterm.py  layouts.py  main.py  pipeline.py  roles.py  update.py  utils.py  workspace.py
claudespace/assets/commands/: implementer.md  planner.md  principal.md  researcher.md  reviewer.md
claudespace/assets/prompts/: implementer.prompt.md  planner.prompt.md  principal.prompt.md  researcher.prompt.md  reviewer.prompt.md
